# ai-jules-mcp

./: README.md  main.py  openapi.yaml  pyproject.toml
ai_jules_mcp/: __init__.py  cli.py  openapi.json
ai_jules_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
