[project]
name = "ai-jules-mcp"
version = "0.1.0"
description = "Jules MCP via OpenAPI Spec"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.4",
    "httpx>=0.28.1",
]

[project.scripts]
"google-jules-mcp" = "ai_jules_mcp.cli:main"

[tool.setuptools.package-data]
"ai_jules_mcp" = ["openapi.json"]

[tool.uv]
package = true
